// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`meter > render with  1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="0"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__4ztlec1 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
          style="--_4ztlec0: #b3144d;"
        >
          veryWeak
        </span>
      </p>
      <div
        class="styles__4ztlec2"
      >
        <div
          class="styles__4ztlec3"
          style="background-color: rgb(179, 20, 77); width: 20%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with medium password 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="2"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__4ztlec1 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
          style="--_4ztlec0: yellow;"
        >
          medium
        </span>
      </p>
      <div
        class="styles__4ztlec2"
      >
        <div
          class="styles__4ztlec3"
          style="background-color: yellow; width: 60%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with strong value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="3"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__4ztlec1 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
          style="--_4ztlec0: #22674e;"
        >
          strong
        </span>
      </p>
      <div
        class="styles__4ztlec2"
      >
        <div
          class="styles__4ztlec3"
          style="background-color: rgb(34, 103, 78); width: 80%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with very strong value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="4"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__4ztlec1 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
          style="--_4ztlec0: #22674e;"
        >
          veryStrong
        </span>
      </p>
      <div
        class="styles__4ztlec2"
      >
        <div
          class="styles__4ztlec3"
          style="background-color: rgb(34, 103, 78); width: 100%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`meter > render with weak value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-labelledby="meter-label"
      aria-live="polite"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="1"
      role="meter"
      title="MyTitle"
    >
      <p
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
        id="meter-label"
      >
        MyTitle
        <span
          class="styles__4ztlec1 style__1yhcak80 style_prominence_default__1yhcak84 style_variant_bodySmallStrong__1yhcak8l style_undefined_compound_0__1yhcak81a"
          style="--_4ztlec0: #7c5400;"
        >
          weak
        </span>
      </p>
      <div
        class="styles__4ztlec2"
      >
        <div
          class="styles__4ztlec3"
          style="background-color: rgb(124, 84, 0); width: 40%;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
